add sign out button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,6 @@
 
   <body>
     <%= yield %>
+    <%= link_to "SIGN OUT BUTTON", destroy_user_session_path, method: :delete %>
   </body>
 </html>
