--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
-<h1>This</h1>
-<h2>is</h2>
-<h3>the</h3>
-<h4>home</h4>
-<h5>page</h5>
+<h1>Homepage</h1>
+
+<% if user_signed_in? %>
+  <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+<% else %>
+  <%= link_to "Log in", new_user_session_path %>
+<% end %>
