--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
   <body>
     <%= yield %>
-    <%= link_to "SIGN OUT BUTTON", destroy_user_session_path, method: :delete %>
+    <% unless user_signed_in? %>
+      <%= link_to "SIGN OUT BUTTON", destroy_user_session_path, method: :delete %>
+    <% end %>
   </body>
 </html>
