--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -4,7 +4,8 @@
 
 <%= simple_form_for @profile do |f| %>
 
-  <%= f.simple_fields_for :user do |ff| %>
+  <%= f.simple_fields_for :profile_user do |ff| %>
+    <%= ff.input :avatar, as: :file %>
     <%= ff.input :first_name %>
     <%= ff.input :last_name %>
   <% end %>
@@ -14,17 +15,37 @@
   <h2>2. Professional details:</h2>
 
   <%= f.input :profession %>
-  <h3>MISSING EXPERTISE</h3>
+
+  <%= f.input :expertise, collection: Profile::EXPERTISES, label: "Experience level:"%>
+
   <h3>input for skills [_________]</h3>
-  <%= f.input :overview %>
+  <%= f.input :overview, label: "Professinal summary:", as: :text  %>
 
   <h2>3. Links and documents</h2>
 
-  <%= f.simple_fields_for :profile_attachment do |paf| %>
-    <%= paf.input :title %>
-    <%= paf.input :url %>
+  <%= f.simple_fields_for :profile_links do |paf| %>
+    <%= paf.input :title, input_html: {name: "profile[profile_links][][title]"} %>
+    <%= paf.input :url, placeholder: "https://", input_html: {name: "profile[profile_links][][url]"} %>
+
+    <%= paf.input :title, input_html: {name: "profile[profile_links][][title]"} %>
+    <%= paf.input :url, placeholder: "https://", input_html: {name: "profile[profile_links][][url]"} %>
     <%= link_to "+ Add another link", "#" %>
   <% end %>
-</br>
+
+  <br>
+  <br>
+  <br>
+
+  <%= f.simple_fields_for :profile_documents do |paf| %>
+    <%= paf.input :title, placeholder: "Ex: Curriculum Vitae", input_html: {name: "profile[profile_documents][][title]"}  %>
+    <%= paf.input :attachment, as: :file, input_html: {name: "profile[profile_documents][][attachment]"} %>
+    <%= link_to "Upload another document", "#" %>
+  <% end %>
+
+
+  <br>
+  <br>
+  <br>
+
   <%= f.submit %>
 <% end %>
