--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,10 @@
 
   <body>
     <%= yield %>
-    <% unless user_signed_in? %>
+    <% if user_signed_in? %>
       <%= link_to "SIGN OUT BUTTON", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "SIGN IN BUTTON", new_user_session_path %>
     <% end %>
 
     <% if user_signed_in? %>
