--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,3 +3,7 @@
 <h3>the</h3>
 <h4>home</h4>
 <h5>page</h5>
+<% if user_signed_in? %>
+  <h3>You are logged in as: <%= current_user.first_name %> <%= current_user.last_name %></h3>
+  <p><%= current_user.email %></p>
+<% end %>
