--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,15 @@
 <div id="dashboardPage">
   <div class="dashboard-header">
     <h1>Hello <%= current_user.first_name %></h1>
-    <%= image_tag "icons/person.svg", alt: "person icon" %>
+    <% if current_user.manager? %>
+      <%= link_to manager_path(current_user.manager) do %>
+        <%= image_tag "icons/person.svg", alt: "person icon" %>
+      <% end %>
+    <% else %>
+      <%= link_to "#" do %>
+        <%= image_tag "icons/person.svg", alt: "person icon" %>
+      <% end %>
+    <% end %>
   </div>
 
   <%= render partial: "#{current_user.role}_dashboard" %>
