--- a/app/assets/stylesheets/config/_utilities.scss
+++ b/app/assets/stylesheets/config/_utilities.scss
@@ -58,3 +58,39 @@
 .mb-0 {
   margin-bottom: 0;
 }
+
+.w-100 {
+  width: 100%;
+}
+
+.vw-100 {
+  width: 100vw;
+}
+
+.h-100 {
+  height: 100%;
+}
+
+.vh-100 {
+  height: 100vh;
+}
+
+.w-50 {
+  width: 50%;
+}
+
+.vw-50 {
+  width: 50vw;
+}
+
+.h-50 {
+  height: 50%;
+}
+
+.vh-50 {
+  height: 50vh;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
