--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,8 +8,8 @@
         <%= image_tag "https://png.pngtree.com/png-clipart/20190520/original/pngtree-vector-users-icon-png-image_4144740.jpg", alt: "alttext", class: "profileAvatar" %>
       <% end %>
       <div class="profileHeaderRight">
-        <h2><%= current_user.display_name %></h2>
-        <p><%= current_user.email %></p>
+        <h2><%= @profile.user.display_name %></h2>
+        <p><%= @profile.user.email %></p>
       </div>
     </div>
 
