--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 // Graphical variables
 @import "config/fonts";
 @import "config/colors";
-@import "config/utilities";
+@import "config/utilities/index";
 
 // Your CSS partials
 @import "components/index";
