--- a/app/assets/stylesheets/config/utilities/_spacing.scss
+++ b/app/assets/stylesheets/config/utilities/_spacing.scss
@@ -20,7 +20,15 @@
 	margin-top: 12px;
 }
 
+.ml-3 {
+	margin-left: 16px;
+}
+
 // Padding
 .pl-0 {
 	padding-left: 0;
+}
+
+.p-1 {
+	padding: 8px;
 }
