--- a/app/assets/stylesheets/config/utilities/_display.scss
+++ b/app/assets/stylesheets/config/utilities/_display.scss
@@ -34,6 +34,10 @@
 	box-shadow: 0px 0px 16px 4px rgba(50, 42, 91, 0.08);
 }
 
+.rounded {
+	border-radius: 8px;
+}
+
 .rounded-lg {
 	border-radius: 16px;
 }
