--- a/app/assets/stylesheets/config/utilities/_spacing.scss
+++ b/app/assets/stylesheets/config/utilities/_spacing.scss
@@ -11,6 +11,10 @@
 	margin-top: 16px;
 }
 
+.mb-3 {
+	margin-bottom: 16px;
+}
+
 .my-3 {
 	@extend .mt-3;
 	margin-bottom: 16px;
@@ -30,5 +34,14 @@
 }
 
 .p-1 {
+	padding: 4px;
+}
+
+.p-2 {
 	padding: 8px;
+}
+
+.px-3 {
+	padding-left: 16px;
+	padding-right: 16px;
 }
