--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -10,9 +10,9 @@
 <div class="container">
   <div class="profileHeader flex">
     <% if @profile.user.avatar.attached? %>
-      <%= image_tag @profile.user.avatar, alt: "alttext", class: "profileAvatar" %>
+      <%= image_tag @profile.user.avatar, alt: "alttext", class: "profileAvatar rounded-circle" %>
     <% else %>
-      <%= image_tag "https://png.pngtree.com/png-clipart/20190520/original/pngtree-vector-users-icon-png-image_4144740.jpg", alt: "alttext", class: "profileAvatar", height: 64, width: 64 %>
+      <%= image_tag "https://png.pngtree.com/png-clipart/20190520/original/pngtree-vector-users-icon-png-image_4144740.jpg", alt: "alttext", class: "profileAvatar rounded-circle", height: 64, width: 64 %>
     <% end %>
     <div class="profileHeaderRight">
       <h2><%= @profile.user.display_name %></h2>
