--- a/app/views/profiles/_my_profile.html.erb
+++ b/app/views/profiles/_my_profile.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <h1>My profile</h1>
   <div class="profileHeader flex">
-    <% if @profile.user.avatar.attached? %>
-      <%= image_tag @profile.user.avatar, alt: "alttext", class: "profileAvatar" %>
+    <% if current_user.avatar.attached? %>
+      <%= image_tag current_user.avatar, alt: "alttext", class: "profileAvatar rounded-circle" , height: 64, width: 64  %>
     <% else %>
-      <%= image_tag "https://png.pngtree.com/png-clipart/20190520/original/pngtree-vector-users-icon-png-image_4144740.jpg", alt: "alttext", class: "profileAvatar", height: 64, width: 64 %>
+      <%= image_tag "https://png.pngtree.com/png-clipart/20190520/original/pngtree-vector-users-icon-png-image_4144740.jpg", alt: "alttext", class: "profileAvatar rounded-circle", height: 64, width: 64 %>
     <% end %>
     <div class="profileHeaderRight">
-      <h2><%= @profile.user.display_name %></h2>
-      <p><%= @profile.user.email %></p>
+      <h2><%= current_user.display_name %></h2>
+      <p><%= current_user.email %></p>
     </div>
   </div>
 
