actually displaying skill_list

--- a/app/views/profiles/_my_profile.html.erb
+++ b/app/views/profiles/_my_profile.html.erb
@@ -24,7 +24,7 @@
 
   <div class="profileSection">
     <h3>Skills</h3>
-    <p>This, That, Thing, Thong, Pung</p>
+    <p><%= @profile.skill_list %></p>
   </div>
 
   <div class="profileSection">
