--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -25,7 +25,7 @@
       <% if current_user.manager? %>
         <% if @connection %>
           <%= link_to "Remove from your network", connection_path(current_user.find_connection(@profile.user)), class: "mr-3", method: :delete %>
-          <%= link_to "Book", "#", class: "mr-3" %>
+          <%= link_to "Book", new_profile_booking_path(@profile), class: "mr-3" %>
         <% else %>
           <%= link_to "Add to your network", profile_connections_path(@profile), class: "mr-3", method: :post %>
         <% end %>
