--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,3 +1,14 @@
 $light-green: #dbfee5;
 $dark-green: #1a8250;
 $gray: #828282;
+$orange: #ff9774;
+$red: #ff464b;
+
+$dark-blue-gradient: linear-gradient(315deg, #4048ef 0%, #5a7bef 100%);
+$light-blue-gradient: linear-gradient(
+	165.68deg,
+	#23baff -19.67%,
+	#5183f0 91.01%
+);
+$violet-blue: #cacffb;
+$radius-md: 15px;
