--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -1,7 +1,6 @@
 <div class="generalProfile">
 
   <div class="profileNav flex">
-    <h2><</h2>
     <h1><%= @profile.user.display_name %></h1>
     <% if @connection %>
       <%= link_to "Add Note", "#writeYourNote" %>
@@ -10,7 +9,7 @@
   <div class="container">
     <div class="profileHeader flex">
       <% if @profile.user.avatar.attached? %>
-        <%= image_tag @profile.user.avatar, alt: "alttext", class: "profileAvatar rounded-circle", height: 64, width: 64  %>
+        <%= image_tag @profile.user.avatar, alt: "alttext", class: "avatar avatar-square", height: 64, width: 64  %>
       <% else %>
         <%= image_tag "https://png.pngtree.com/png-clipart/20190520/original/pngtree-vector-users-icon-png-image_4144740.jpg", alt: "alttext", class: "profileAvatar rounded-circle", height: 64, width: 64 %>
       <% end %>
