--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,6 +1,8 @@
 $light-green: #dbfee5;
 $dark-green: #1a8250;
 $gray: #828282;
+$light-gray: #f9fbfe;
+$dark-gray: #2f2f3e;
 $orange: #ff9774;
 $red: #ff464b;
 
