--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,7 +1,7 @@
 <div class="profiles-index" style="margin-top: 20%;">
-  <section class="switch">
-    <%= link_to "My network", profiles_path(network: true), class: "#{'active' if params[:network]}" %>
-    <%= link_to "Everyone", profiles_path %>
+  <section class="flex justify-content-between p-3 my-3" style="background-color: #F9FBFE;">
+    <%= link_to "My network", profiles_path(network: true), class: "btn #{params[:network] ? 'btn-white' : 'btn-transparent'}" %>
+    <%= link_to "Everyone", profiles_path, class: "btn #{params[:network] ? 'btn-transparent' : 'btn-white'}" %>
   </section>
 
   <section class="filter">
