--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -2,6 +2,8 @@ button,
 a.btn {
 	@extend .no-decoration;
 
+	text-transform: uppercase;
+	font-weight: 500;
 	border: none;
 	border-radius: $radius-md;
 	color: $dark-gray;
@@ -10,6 +12,11 @@ a.btn {
 	&.btn-primary {
 		color: #fff;
 		background: $dark-blue-gradient;
+	}
+
+	&.btn-secondary {
+		color: #fff;
+		background: $light-blue-gradient;
 	}
 
 	&.btn-white {
