top part of profiles index

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,15 +1,21 @@
-<div class="profiles-index" style="margin-top: 20%;">
-  <section class="flex justify-content-between p-3 my-3" style="background-color: #F9FBFE;">
-    <%= link_to "My network", profiles_path(network: true), class: "btn #{params[:network] ? 'btn-white' : 'btn-transparent'}" %>
-    <%= link_to "Everyone", profiles_path, class: "btn #{params[:network] ? 'btn-transparent' : 'btn-white'}" %>
+<div class="profiles-index">
+  <section class="head">
+    <button>
+      <%= image_tag "icons/search", alt: "search" %>
+    </button>
+    <p>FREELANCERS</p>
+    <button>
+      <%= image_tag "icons/filter", alt: "filter" %>
+    </button>
   </section>
 
-  <section class="filter">
-    <input type="text" placeholder="Search" />
-    <div>
-      <button>filter</button>
-      <button>sort by</button>
-    </div>
+  <section class="switch flex justify-content-between p-3 my-3" style="background-color: #F9FBFE;">
+    <%= link_to profiles_path(network: true), class: "flex items-center btn #{params[:network] ? 'btn-white' : 'btn-transparent'}" do %>
+      <%= image_tag "icons/person-check", alt: "in network" %> My network
+    <% end %>
+    <%= link_to profiles_path, class: "flex items-center btn #{params[:network] ? 'btn-transparent' : 'btn-white'}" do %>
+      <%= image_tag "icons/people", alt: "everyone" %> Everyone
+    <% end %>
   </section>
 
   <section class="cards">
