--- a/app/views/pages/_freelancer_dashboard.html.erb
+++ b/app/views/pages/_freelancer_dashboard.html.erb
@@ -1,3 +1,10 @@
 <div class="stat-card">
   <h4>Something should go here</h4>
+  <div class="manager-dashboard-actions">
+    <div class="flex items-center">
+      <%= link_to "Email invite", new_user_invitation_path  %>
+      <%= image_tag "icons/mail", alt: "Invite a manager" %>
+    </div>
+  </div>
+
 </div>
