styling on profile card

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -5,6 +5,7 @@ a {
 	background: transparent;
 
 	&.btn {
+		display: block;
 		text-transform: uppercase;
 		font-weight: 500;
 		border-radius: $radius-md;
