--- a/app/views/profiles/_card.html.erb
+++ b/app/views/profiles/_card.html.erb
@@ -16,13 +16,22 @@
     </div>
 
     <% if conversation %>
-      <%= link_to conversation_path(conversation) do %>
+      <%= link_to conversation_path(conversation), class: "btn btn-white mt-3" do %>
         <%= image_tag "icons/message", alt: "message" %> Message
       <% end %>
     <% else %>
-      <%= link_to profile_conversations_path(profile, conversation: { profile_id: profile.id }), method: :post do %>
+      <%= link_to profile_conversations_path(profile, conversation: { profile_id: profile.id }), method: :post, class: "btn btn-white mt-3" do %>
         <%= image_tag "icons/message", alt: "message" %> Message
       <% end %>
     <% end %>
+    <div class="flex items-center justify-content-center mt-3">
+      <% profile.average_rating.to_i.times do %>
+        <%= image_tag "icons/colored-rating", alt: "rating" %>
+      <% end %>
+      <% (5 - profile.average_rating.to_i).times do %>
+        <%= image_tag "icons/rating", alt: "rating" %>
+      <% end %>
+      <span class="rating-size">(<%= profile.ratings.size %>)</span>
+    </div>
   </div>
 </div>
