--- a/app/assets/stylesheets/components/_profile_card.scss
+++ b/app/assets/stylesheets/components/_profile_card.scss
@@ -1,8 +1,16 @@
 .profile-card {
-	@extend .p-3;
-
-	border-right: 1px solid #f4f6f9;
 	border-bottom: 1px solid #f4f6f9;
+	padding-top: 16px;
+	padding-bottom: 16px;
+
+	&:nth-child(even) {
+		padding-left: 16px;
+	}
+
+	&:nth-child(odd) {
+		border-right: 1px solid#f4f6f9;
+		padding-right: 16px;
+	}
 
 	.top {
 		@extend .flex, .items-start, .justify-content-between;
@@ -37,6 +45,11 @@
 
 				font-size: 12px;
 			}
+		}
+
+		.rating-size {
+			margin-left: 2px;
+			color: #6c7b8a;
 		}
 	}
 }
