--- a/app/assets/stylesheets/config/utilities/_display.scss
+++ b/app/assets/stylesheets/config/utilities/_display.scss
@@ -34,6 +34,10 @@
 	justify-content: center;
 }
 
+.justify-content-around {
+  justify-content: space-around;
+}
+
 .list-style-none {
 	list-style: none;
 }
