--- a/app/assets/stylesheets/config/utilities/_display.scss
+++ b/app/assets/stylesheets/config/utilities/_display.scss
@@ -54,6 +54,10 @@
 	border-radius: 50%;
 }
 
+.rounded-pill {
+	border-radius: 100px;
+}
+
 .text-center {
-  text-align: center;
+	text-align: center;
 }
