--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -2,17 +2,48 @@
 	@extend .my-3;
 
 	border-radius: $radius-md;
-	padding: 4px 8px;
 	box-shadow: 0px 6px 10px rgba(50, 51, 94, 0.15);
 	position: relative;
 
 	&.right {
+		padding: 4px 0 4px 8px;
 		background: #cacffb;
 		margin-left: 60px;
+
+		.triangle {
+			width: 0;
+			height: 0;
+			border-top: 8px solid transparent;
+			border-bottom: 8px solid transparent;
+			border-left: 8px solid #cacffb;
+			position: absolute;
+			right: -6px;
+		}
 	}
 
 	&.left {
+		padding: 4px 8px 4px 0;
 		margin-right: 60px;
+
+		.content {
+			padding-left: 8px;
+		}
+
+		.triangle {
+			width: 0;
+			height: 0;
+			border-top: 8px solid transparent;
+			border-bottom: 8px solid transparent;
+			border-right: 8px solid white;
+			position: absolute;
+			left: -6px;
+		}
+	}
+
+	.message-wrapper {
+		@extend .flex, .justify-content-between, .items-center;
+
+		position: relative;
 	}
 
 	.time {
