utility classes and div fixing

--- a/app/assets/stylesheets/config/utilities/_spacing.scss
+++ b/app/assets/stylesheets/config/utilities/_spacing.scss
@@ -67,6 +67,14 @@
 	margin-left: 16px;
 }
 
+.mt-4 {
+  margin-top: 32px;
+}
+
+.mt-5 {
+  margin-top: 64px;
+}
+
 // Padding
 .pl-0 {
 	padding-left: 0;
