--- a/app/assets/stylesheets/config/utilities/_display.scss
+++ b/app/assets/stylesheets/config/utilities/_display.scss
@@ -22,6 +22,10 @@
 	align-items: center;
 }
 
+.items-self-end {
+	align-self: flex-end;
+}
+
 .justify-content-start {
 	justify-content: flex-start;
 }
